<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/monsoon5"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fingerTitle"
            android:layout_marginBottom="8dp"
            android:textStyle="bold|normal"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <TextView
            android:id="@+id/tv_userIdentity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/hint_email"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:text="@string/fingerDescription"/>

        <ImageView
            android:id="@+id/iv_fp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_fingerprint_white_circle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="24dp"
            android:text="@string/fingerHint"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="72dp">

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fingerButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>